--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100076143675609">HIRE
                 ME</a>
         </div>
-
+        <div class="half-width">
+            <img src="picture/263590084_367814988436082_310171517188686319_n.jpg" alt="Farhana">
+        </div>
     </section>
 </body>
 
