--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="gmmg">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="name">Farhana Akhter Falguni</span></h1>
