--- a/index.html
+++ b/index.html
@@ -39,6 +39,31 @@
             <img src="picture/263590084_367814988436082_310171517188686319_n.jpg" alt="Farhana">
         </div>
     </section>
+    <section>
+        <div class="half-width">
+            <img src="picture/266463459_621517535784255_4744911419993551908_n.jpg" alt="Farhana">
+        </div>
+        <div class="half-width">
+            <h3>I am a professional web developer</h3>
+            <p>Hi! I am Farhana Kahter Falguni, a web designer/developer focused on crafting great web experience
+                Designing
+                and
+                Coding havebeen my passion since the days I started working with computers but I found myself into web
+                design/development since 2022. I enjoy creating beautifully designed, intuitive and functional
+                websites.I am curious, and I enjoy work that challenges me to learn something new and stretch in a
+                different direction. I do my
+                best to stay on top of changes in the state of the art so that I can meet challenges with tools well
+                suited to the job
+                at hand. The list of projects I follow on GitHub will give you a good idea of the types of tools I would
+                prefer to be using,
+                and my Instapaper “Starred” list will give you a glimpse into the reading material I find interesting
+                enough to share.
+            </p>
+            <a class="link-button" target="_blank"
+                href="https://www.facebook.com/profile.php?id=100076143675609">Contact Me</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
