--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="first-section flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="name">Farhana Akhter Falguni</span></h1>
@@ -39,30 +39,53 @@
             <img src="picture/263590084_367814988436082_310171517188686319_n.jpg" alt="Farhana">
         </div>
     </section>
-    <section>
+    <section class="second-section flexible-container">
         <div class="half-width">
             <img src="picture/266463459_621517535784255_4744911419993551908_n.jpg" alt="Farhana">
         </div>
         <div class="half-width">
             <h3>I am a professional web developer</h3>
-            <p>Hi! I am Farhana Kahter Falguni, a web designer/developer focused on crafting great web experience
-                Designing
-                and
-                Coding havebeen my passion since the days I started working with computers but I found myself into web
-                design/development since 2022. I enjoy creating beautifully designed, intuitive and functional
-                websites.I am curious, and I enjoy work that challenges me to learn something new and stretch in a
-                different direction. I do my
-                best to stay on top of changes in the state of the art so that I can meet challenges with tools well
-                suited to the job
-                at hand. The list of projects I follow on GitHub will give you a good idea of the types of tools I would
-                prefer to be using,
-                and my Instapaper “Starred” list will give you a glimpse into the reading material I find interesting
-                enough to share.
+            <p>
+                I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                how to make simple
+                website. My goal is to build 3 websites and learn advanced topics.
             </p>
             <a class="link-button" target="_blank"
                 href="https://www.facebook.com/profile.php?id=100076143675609">Contact Me</a>
         </div>
+    </section>
+    <section class="third-section">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="half-width">
+                <h1>Full Stack Web Developer
+                </h1>
+                <h3 class="name">2022-Present | Pro Level Developer
+                </h3>
+                <p>
+                    I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't
+                    stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know
+                    the
+                    deployment,
+                    server and security. I will give you 100% web solution.
 
+                </p>
+            </div>
+            <div class="half-width">
+                <h1>Baby Web Developer
+                </h1>
+                <h3 class="name">2021-2022 | Programming Hero Learner
+                </h3>
+                <p>
+                    They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them.
+                    They liked it. And uploaded the content. It was fun working at Programming Hero.
+
+                </p>
+            </div>
+        </div>
     </section>
 </body>
 
