--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section class="third-section">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="half-width">
+            <div class="experience-area">
                 <h1>Full Stack Web Developer
                 </h1>
                 <h3 class="name">2022-Present | Pro Level Developer
@@ -72,7 +72,7 @@
 
                 </p>
             </div>
-            <div class="half-width">
+            <div class="experience-area">
                 <h1>Baby Web Developer
                 </h1>
                 <h3 class="name">2021-2022 | Programming Hero Learner
